--- a/path/src/Insurance/ContentBundle/Resources/views/Default/index.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/index.html.twig
@@ -105,7 +105,7 @@ jQuery(function(){
                                 	</div>
                                     <input type="hidden" value="{% if (carModel)%}{{carModel}}{% endif %}" id="carModel" name="carModel" />
                                 </div>
-                                        <div class="calculate">рассчитать</div>
+                                        <div class="calculate"><span></span>рассчитать</div>
                             </form>
                         </div>
                     </div>
@@ -160,10 +160,10 @@ jQuery(function(){
                             <div class="title">Моментальный расчет</div>
                             <div class="text">Наш сервис позволяет рассчитать стоимость полиса страхования в реальном времени</div>
                         </div>
-                        <div class="adv_point">
-                            <div class="ico smile"></div>
-                            <div class="title">Простота и удобство</div>
-                            <div class="text">Осторожно! Даже ребенок сможет оформить и оплатить полис на нашем сайте</div>
+						<div class="adv_point rightt">
+                            <div class="ico protect"></div>
+                            <div class="title">Надежность</div>
+                            <div class="text">Мы работаем только с самыми надежными страховыми компаниями, лидерами рынка</div>
                         </div>
                         <div class="adv_point">
                             <div class="ico dollar"></div>
@@ -171,11 +171,11 @@ jQuery(function(){
                             <div class="text">Наш сервис показывает только реальную стоимость полиса, без всяких обманов и уловок.</div>
                         </div>
                         <div class="adv_point">
-                            <div class="ico protect"></div>
-                            <div class="title">Надежность</div>
-                            <div class="text">Мы работаем только с самыми надежными страховыми компаниями, лидерами рынка</div>
+                            <div class="ico smile"></div>
+                            <div class="title">Простота и удобство</div>
+                            <div class="text">Осторожно! Даже ребенок сможет оформить и оплатить полис на нашем сайте</div>
                         </div>
-                        <div class="adv_point">
+                        <div class="adv_point rightt">
                             <div class="ico delivery"></div>
                             <div class="title">Бесплатная доставка</div>
                             <div class="text">Мы доставим заказаный Вами полис в любую точку Украины совершенно бесплатно</div>
