--- a/path/src/Insurance/ContentBundle/Resources/public/css/fixes.css
+++ b/path/src/Insurance/ContentBundle/Resources/public/css/fixes.css
@@ -249,7 +249,7 @@ form.personal_data .control_point .error_text_box_quest, .fos_user_registration_
       color: white;
       position: absolute;
       top: 30px;
-      left: -9px;
+      left: -4px;
       background-color: #e73636;
       z-index: 3;
       display: none; }
@@ -452,7 +452,17 @@ form.personal_data .control_point input:focus {
       -moz-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.41);
       -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.41);
       box-shadow: 0 2px 3px rgba(0, 0, 0, 0.41); }
-
+ 
+ form.modal_form .control_point.error input {
+    border-color: #e73636;
+  }
+  form.modal_form .control_point.success input {
+    border-color: #79a837;
+  }
+  
+ form.modal_form .control_point.error .error_text_box_quest, form.modal_form .control_point.error .error_text_box {
+    display: block;
+}
 
 form.personal_data .control_point .error_text_box:before {
         content: "";
@@ -461,7 +471,7 @@ form.personal_data .control_point .error_text_box:before {
         border-right: 8px solid rgba(0, 0, 0, 0);
         position: absolute;
         top: -8px;
-        right: 9px; }
+        right: 11px; }
 
 /*------------------------------------------------------------------------------------------- */
 /*----------------------------------------- AUTO INFO --------------------------------------- */
@@ -524,6 +534,13 @@ line-height: 28px;
   text-transform: uppercase!important;
   font-size: 12px; }
 
+.calculator_content aside .sidebar_title {
+      font-family: "robotoregular", Arial black, Helvetica, sans-serif;
+      font-size: 18px;
+      color: black;
+      margin-bottom: 20px;
+      font-weight: 600;	  } 
+  
 .before_calc {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 17px;
@@ -575,13 +592,13 @@ line-height: 28px;
 
 .combo.wide .scroll_box {
     width: 100%;
-    height: 415px;
+    height: 420px;
 	background-color: #fff;
 	}
 .combo.wide .scroll_box .viewport {
-      height: 410px; }
+      height: 415px; }
 .combo.wide .scroll_box .track {
-      height: 405px!important;
+      height: 410px!important;
 	  }
 
 
@@ -693,15 +710,7 @@ line-height: 28px;
   .login_link a:hover {
       color: #FFFFFF;
   }
-  form.modal_form .control_point.error input {
-    border-color: #e73636;
-  }
-  form.modal_form .control_point.success input {
-    border-color: #79a837;
-  }
-  form.modal_form .control_point.error .error_text_box_quest, form.modal_form .control_point.error .error_text_box {
-    display: block;
-}
+
 
 ::-webkit-input-placeholder {
    font-size: 14px;
