--- a/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
@@ -6,6 +6,7 @@
 <!--[if lt IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
+<link rel="icon" href="{{asset('bundles/insurancecontent/images/favicon.ico')}}"/>
 <link href="{{asset('bundles/insurancecontent/css/reset.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{asset('bundles/insurancecontent/css/jquery-ui.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{asset('bundles/insurancecontent/css/modals.css')}}" rel="stylesheet" type="text/css"/>
@@ -110,11 +111,20 @@
                         </ul>
                     </li>#}
                     <li{% if (path(app.request.attributes.get('_route')) == path('about'))%} class="current"{% endif %}>
-                        <a href="{{path('about')}}">Ваш помощник<span class="delim"></span></a>
+                        <a href="{{path('about')}}">Ваш помощник<span class="delim"></span><span class="arrow"></span></a>
                     {% if (path(app.request.attributes.get('_route')) == path('about'))%}<div class="shadow"></div>{% endif %}
                     </li>
                     {#<li{% if (path(app.request.attributes.get('_route')) == path('contacts'))%} class="current"{% endif %}>
                         <a href="{{path('contacts')}}">Контакты<span class="delim"></span></a>
+						<ul class="inner_menu">
+                            <li>
+                                <a href="">Все об ОСАГО<span class="delimiter"></span></a>
+                                <div class="shadow"></div>
+                            </li>
+                            <li><a href="">Платное заполнение<span class="delimiter"></span></a></li>
+                            <li><a href="">Бланки<span class="delimiter"></span></a></li>
+                            <li><a href="">Правила заполнения<span class="delimiter"></span></a></li>
+                        </ul>
                     {% if (path(app.request.attributes.get('_route')) == path('contacts'))%}<div class="shadow"></div>{% endif %}
                     </li>#}
                 </ul>
