--- a/path/src/Insurance/ContentBundle/Resources/views/Default/about.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/about.html.twig
@@ -1,11 +1,22 @@
 {% extends 'InsuranceContentBundle::base.html.twig' %}
 {% block content %}
-    <section>
-        <div class="content">
-            <div class="limit">
-            <h1>О нас</h1>
-            </div>
+ <section class="content">  
+        <div class="limit text_content"><!-- .text_content for text-page only -->  
+                    <div class="title">
+                        <h1>О сервисе</h1>
+                        <h3>Страховой брокер «Полисбук» – это путеводитель на страховом рынке, защищающий Ваши интересы.</h3>
+                    </div>                    
+                    <p>Современный рынок страховых услуг в России характеризуется высокой степенью конкуренции и наличием большого количества страховых компаний.  Вам как владельцу имуществом, который хочет предотвратить неприятности, сложно разобраться в том, что кроется за высокой или низкой ценой страховки, предлагаемой страховщиками.</p>
+                    <p>Принимая решение о заключении страхового договора с какой-либо страховой компанией, Вы основываетесь на массе различных критериев, таких как репутация компании, наличие рекомендаций знакомых, размер тарифов, отзывы в прессе и интернете и т.д. Далеко не каждый может разобраться во всех тонкостях страховых условий, да и времени на это можно потратить много.</p>
+                    <p>Компания Страховой брокер «Полисбук», являясь командой единомышленников, состоящих из профессионалов с большим опытом работы в страховании, постаралась облегчить Вам задачу поиска и выбора страховой компании для защиты Вашего имущества. Специалисты Полисбук имеют огромный опыт работы на страховом рынке России и обладают глубокими профессиональными знаниями в методологии страхования, оценке рисков, продуктовой линейке видов страхования, заключении договоров страхования.</p>
+                    <p>Страховой брокер «Полисбук» – независимый консультант, который помогает найти максимально выгодное предложение, это не только выбор надежной страховой компании, но и подходящих  именно для Вас условий по доступной цене.</p>
+                    <p>Благодаря программе, разработанной специалистами Страховой брокер «Полисбук», Вы можете за 1 минуту рассчитать цену страховки, подобрать оптимальные условия и надежную страховую компанию на основе выбранных Вами критериев. Например, если для Вас важна в первую очередь цена страхового полиса, то программа предложит самый выгодный вариант страхования среди предложений ведущих страховых компаний. А если для Вас важна не только цена, но еще  условия страхования, и доступность Страховщика, то программа сделает выборку именно по указанным параметрам, а окончательный выбор, конечно, за Вами. Программа, являясь уникальной разработкой специалистов компании «Полисбук», включает в себя оценку страховых компаний по таким критериям как финансовое состояние, доступность, ценовая политика, сервис для клиентов, наличие дополнительных услуг и т.п.</p>
+                    <p>Наша цель – сократить затраты Вашего  времени не только при подборе страховой компании и условий страхования, но и на заключение договора страхования. При заказе страхового полиса специалист нашей компании привезет все документы в назначенное место и время, без дополнительного визита в офис компании и без дополнительных затрат с Вашей стороны.</p>
+                    <p>При заключении договора страхования с помощью Страховой брокер «Полисбук»  Вы получаете доступ в «Личный кабинет», где можете хранить информацию обо всех своих страховых полисах, а также можете воспользоваться разделом «Страховой помощник», где специалисты  СБ «Полисбук»  предоставят для Вас информацию по урегулированию убытков и более выгодному продлению договора страхования.  Страховой брокер «Полисбук» работает только с проверенными и надежными страховыми компаниями, которые имеют устойчивое финансовое положение, хорошую репутацию и предоставляют качественные страховые услуги.</p>
+                    <p>Мы поможем Вам найти именно то, что соответствует Вашим потребностям и возможностям.</p>
         </div>
+			 <div class="footer-push"></div>
     </section>
+
 </section>
 {% endblock %}
