--- a/path/src/Insurance/ContentBundle/Resources/views/Default/index.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/index.html.twig
@@ -178,7 +178,7 @@ jQuery(function(){
                         <div class="adv_point rightt">
                             <div class="ico delivery"></div>
                             <div class="title">Бесплатная доставка</div>
-                            <div class="text">Мы доставим заказаный Вами полис в любую точку Украины совершенно бесплатно</div>
+                            <div class="text">Мы доставим заказаный Вами полис по Киеву совершенно бесплатно</div>
                         </div>
                         <div class="adv_point">
                             <div class="ico kee"></div>
