--- a/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
@@ -105,9 +105,9 @@
                         </ul>
 						</li>
                     <li>
-                        <a href="{{path('contacts')}}">Кто мы такие?<span class="arrow"><span class="delim"></span></a>
+                        <a href="{{path('about')}}">Кто мы такие?<span class="arrow"><span class="delim"></span></a>
 						<ul class="inner_menu">
-						    <li><a href="">О сервисе<span class="delimiter"></span></a>
+						    <li><a href="about">О сервисе<span class="delimiter"></span></a>
                                 <div class="shadow"></div>
                             </li>
                             <li><a href="">О нашем страховом партнере<span class="delimiter"></span></a></li>
