--- a/path/src/Insurance/ContentBundle/Resources/public/css/fixes.css
+++ b/path/src/Insurance/ContentBundle/Resources/public/css/fixes.css
@@ -68,10 +68,10 @@ header .main_menu div.shadow {
 header .main_menu li a {
         height: 45px;
 		line-height: 46px;
-		font-size: 14px;
+		font-size: 15px;
 		letter-spacing: 0.02em;
 		padding: 0 20px 0 22px;
-		font-family: "Arial", Helvetica, sans-serif;
+		font-family: 'RobotoRegular', Arial, Helvetica, sans-serif;
 		font-weight: 400;
 		color: #444;
 		}
