прелоадер для callback and feedback

--- a/path/src/Insurance/ContentBundle/Resources/public/css/fixes.css
+++ b/path/src/Insurance/ContentBundle/Resources/public/css/fixes.css
@@ -341,6 +341,37 @@ form.personal_data .control_point .error_text_box_quest, .fos_user_registration_
         position: absolute;
         top: -8px;
         left: 5px; }
+		
+/*------------------------------------------------------------------------------------------- */
+/*------------------------------------- PASS MODAL ------------------------------------------ */
+/*------------------------------------------------------------------------------------------- */
+
+  #pass_modal .sub_text {
+    width: 435px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: normal;
+    margin: 0 auto 15px;
+    text-align: justify;
+    font-size: 14px;
+    color: black; }
+
+
+/*------------------------------------------------------------------------------------------- */
+/*------------------------------------- PRELOADER ------------------------------------------- */
+/*------------------------------------------------------------------------------------------- */	
+		
+.modal_preloader {
+	float: right;
+    display: inline-block;
+	margin-right:10px;
+    display:none;
+    position: relative;
+	margin-top:8px;
+	}
+.modal_preloader.on {
+    display:block;
+}	
+		
 /*------------------------------------------------------------------------------------------- */
 /*---------------------------------------- TOTAL -------------------------------------------- */
 /*------------------------------------------------------------------------------------------- */
