прелоадер в модалках finish

--- a/path/src/Insurance/ContentBundle/Resources/views/Form/feedback_form.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Form/feedback_form.html.twig
@@ -25,6 +25,9 @@
         </div>
         {{form_widget(feedback_form.connectionType, {type: 'hidden', value: 'F'})}}
         <div class="green_button">Отправить вопрос</div>
+		<div class="modal_preloader">
+        <img src="{{asset('bundles/insurancecontent/images/2.gif')}}" alt="img" />
+        </div>
         <div style="clear: both;"></div>
     </form>
 </div>
