ответка на звонок и вопрос continue

--- a/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
@@ -324,11 +324,8 @@
 				    $('.modal_preloader').removeClass('on');
                     if (data.message == 'success') {
                         $('#success_modal .inform_title').text('Спасибо, Ваш запрос принят.');
-                        
-                        $("#success_modal").fadeIn(300);
-                        $('#success_modal').modal().open();
-						$("#success_modal").delay(1000).fadeOut(300);
-						$.modal().close();
+                        $('#success_modal').show();
+						$('#success_modal').delay(1000).fadeOut(700).hide();
                     } else if(data.message == 'error') {
                         console.log(data.error);
                         $('#error_modal').show();
