--- a/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
@@ -323,8 +323,12 @@
                 .done(function(data){
 				    $('.modal_preloader').removeClass('on');
                     if (data.message == 'success') {
-                        $('#success_modal .inform_title').text('Спасибо, Ваш запрос принят.');                        
+                        $('#success_modal .inform_title').text('Спасибо, Ваш запрос принят.');
+                        $('#success_modal .form_grey_button').hide();
+                        $('#success_modal .form_green_button').hide();
                         $('#success_modal').modal().open();
+						$.modal().delay(2000).fadeOut(1000).close();
+						
                     } else if(data.message == 'error') {
                         console.log(data.error);
                         $('#error_modal').show();
