--- a/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
@@ -327,7 +327,8 @@
                         $('#success_modal .form_grey_button').hide();
                         $('#success_modal .form_green_button').hide();
                         $('#success_modal').modal().open();
-						$.modal().delay(2000).fadeOut(1000).close();
+						$('#success_modal').fadeOut(1000);
+						$.modal().close();
 						
                     } else if(data.message == 'error') {
                         console.log(data.error);
